@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#5052] Cleanup: Deprecate TemplateHelper::createRestrictedImage
 - [#5111] Feature: Check for empty or invalid e-mail addresses when sending e-mails
 - [#5107] Bugfix: Drop the use of forceReturnPath
 - [#5106] Change: Add more specific exceptions to Tx_Oelib_AbstractMailer::send
